--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Automated news content creator and Facebook poster",
   "main": "run.js",
   "scripts": {
-    "start": "node run.js",
     "test": "node test.js",
-    "test:facebook": "node test-facebook.js"
+    "test:facebook": "node test-facebook.js",
+    "deploy": "wrangler deploy",
+		"dev": "wrangler dev --test-scheduled",
+		"start": "wrangler dev --test-scheduled"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
@@ -16,5 +18,8 @@
     "rss-parser": "^3.13.0",
     "form-data": "^4.0.0"
   },
+	"devDependencies": {
+		"wrangler": "^4.16.1"
+	},
   "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
