--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:facebook": "node test-facebook.js",
     "deploy": "wrangler deploy",
 		"dev": "wrangler dev --test-scheduled",
-		"start": "wrangler dev --test-scheduled"
+		"start": "wrangler dev --test-scheduled",
+		"logs": "wrangler tail"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
